Form to verify an estimation, and debug the PDF generation

--- a/templates/bdc/index.html.twig
+++ b/templates/bdc/index.html.twig
@@ -9,7 +9,7 @@
     <h1 class="primary-title">Liste des bons de cession stockés</h1>
     <ul class="bdcCard">
     {% for file in files %}
-        <li><a href="../uploads/BDC/{{ file }}">{{ file }}</a></li>
+        <li><a href="/../uploads/BDC/{{ file }}">{{ file }}</a></li>
     {% endfor %}
     </ul>
 {% endblock %}
