--- a/templates/estimations/show.html.twig
+++ b/templates/estimations/show.html.twig
@@ -68,7 +68,7 @@
                 <td>{{ estimation.isValidatedPayment ? 'Yes' : 'No' }}</td>
             </tr>
             <tr>
-                <th>IsValidatedSignature</th>
+                <th>IsValidatedCi</th>
                 <td>{{ estimation.isValidatedCi ? 'Yes' : 'No' }}</td>
             </tr>
         </tbody>
