--- a/templates/estimations/show.html.twig
+++ b/templates/estimations/show.html.twig
@@ -81,6 +81,6 @@
 
     <a class="fourth-button" href="{{ path('estimations_edit', {'id': estimation.id}) }}">Edit</a>
 
-    <a class="fourth-button" href="{{ include('estimations/_delete_form.html.twig') }}</a>
+    <a class="fourth-button" href="{{ path('estimations/_delete_form.html.twig') }}">Delete</a>
 </section>
 {% endblock %}
