creating faq crud

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,7 +58,7 @@
                     <p>Menu</p>
                 </div>
 
-                <a href="{{ path('show_faq') }}">
+                <a href="{{ path('faq_index') }}">
                     <div id="faq-button">
                         <p>FAQ</p>
                     </div>
@@ -79,7 +79,7 @@
                 <li><a href="#" title="Revendre ton tèl">Revendre ton tèl</a></li>
                 <li><a href="#" title="Devenir organisateur de collecte">Tu veux devenir organisateur de collecte</a></li>
                 <li><a href="#" title="Collectes et évènements">Collectes et évènements</a></li>
-                <li><a href="{{ path('show_faq') }}" title="FAQ">Besoin d'aide ?</a></li>
+                <li><a href="{{ path('faq_index') }}" title="FAQ">Besoin d'aide ?</a></li>
                 <li><a href="#" title="Paiement">Paiement</a></li>
                 <li><a href="#" title="Livraison">Livraison</a></li>
                 <li>Ce que l'on oublie de lire (
