--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -20,10 +20,13 @@
         <h1 class="titleAdmin">Bienvenue sur l'interface d'administration</h1>
     </div>
 </header>
-
-<div class="form-group">
-        <label for="search-user"></label><input class="form-control" type="text" id="search-user" value="" placeholder="Rechercher"/>
+<div class="jumbotron">
+    <div class="container">
+        {{ form_start(form) }}
+        {{ form.row('nameSearch') }}
+        {{ form_end(form) }}
     </div>
+</div>
 
 <main class="cards-admin">
     <div class="menu-admin">
