create Search and SearchType

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -23,7 +23,7 @@
 <div class="jumbotron">
     <div class="container">
         {{ form_start(form) }}
-        <input type="submit" placeholder="Go!">
+        <input class="fourth-button" type="submit" placeholder="Go!">
         {{ form_end(form) }}
     </div>
 </div>
