--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,9 +17,6 @@
                 <ul>
                     <li class="primary-title primary-title-menu"><a href="#" title="Description Bip Bip">Bip Bip, qu'est ce que c'est ?</a></li>
                     <li class="primary-title primary-title-menu"><a href="#" title="Estimer son téléphone">Estimer mon tel</a></li>
-                    {% if app.user and app.user.roles == 'ROLE_USER' %}
-                        <li class="primary-title primary-title-menu"><a href="#" title="Revends ton téléphone">Revendre ton tel</a></li>
-                    {% endif %}
                     <li class="primary-title primary-title-menu"><a href="#" title="Acheter un téléphone">Acheter un tel</a></li>
                     <li class="primary-title primary-title-menu"><a href="#" title="Les points de collecte">Les points de collecte</a></li>
                     <li class="primary-title primary-title-menu"><a href="#" title="Organiser une collecte">Organiser une collecte</a></li>
@@ -31,7 +28,7 @@
                     {% if app.user %}
                         <h3 class="user_name">{{ app.user.firstname }} {{ app.user.lastname }}</h3>
                         <a href="{{ path('app_logout') }}" class="disconnection"> Se déconnecter</a>
-                        {% if app.user.roles == 'ROLE_USER' %}
+                        {% if app.user.roles == ["ROLE_USER"] %}
                             <a href="#" title="Page profil" class="fourth-button">Mon profil</a>
                         {% else %}
                             <a href="{{ path('adminhome_admin') }}" title="Page Admin" class="fourth-button">Accéder à la plateforme d'administration</a>
