test pour faire disparaitre le message flash apres quelques secondes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,7 +44,7 @@
             </nav>
             <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></a>
             {% for message in app.flashes('success') %}
-                <div class="alert alert-success text-center">
+                <div class="alert alert-success text-center" id="flash">
                     {{ message }}
                 </div>
             {% endfor %}
