--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -22,7 +22,9 @@
 </header>
 <div class="jumbotron">
     <div class="container">
-
+        {{ form_start(form) }}
+        <input class="fourth-button" type="submit" placeholder="Go!">
+        {{ form_end(form) }}
     </div>
 </div>
 
