--- a/templates/bdc/editUser.html.twig
+++ b/templates/bdc/editUser.html.twig
@@ -1,13 +1,18 @@
 {% extends 'admin/index.html.twig' %}
 
-{% block title %}Vérification de l'estimation{% endblock %}
+{% block title %}Vérification du client{% endblock %}
 
 {% block body %}
     {{ form_start(form) }}
     <main class="container">
+        <div class="progress">
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="6" style="width: 50%">
+                3 sur 6
+            </div>
+        </div>
         <div class="row">
             <div class="col-12 mx-auto text-center form p-4">
-                <h1 class="primary-title">Etape 2 : vérification des informations</h1>
+                <h1 class="primary-title">Etape 3 / 6 : informations du client</h1>
             </div>
         </div>
         <div class="row bg-info align-items-center">
@@ -25,119 +30,109 @@
         </div>
         <div class="row bg-light align-items-center">
             <div class="col-3 text-right">
-                Marque :
+                Prénom :
             </div>
             <div class="col-2 text-center font-weight-bold">
-                {{ estimation.brand }}
+                {{ estimation.user.firstname }}
             </div>
             <div class="col-1 text-center ">
                 <input type="checkbox" aria-label="Checkbox">
             </div>
             <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.brand, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+                {{ form_widget(form.firstname, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
             </div>
         </div>
         <div class="row bg-light align-items-center">
             <div class="col-3 text-right">
-                Modèle :
+                Nom :
             </div>
             <div class="col-2 text-center font-weight-bold">
-                {{ estimation.model }}
+                {{ estimation.user.lastname }}
             </div>
             <div class="col-1 text-center ">
                 <input type="checkbox" aria-label="Checkbox">
             </div>
             <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.model, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+                {{ form_widget(form.lastname, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
             </div>
         </div>
         <div class="row bg-light align-items-center">
             <div class="col-3 text-right">
-                Capacité :
+                Adresse mail :
             </div>
             <div class="col-2 text-center font-weight-bold">
-                {{ estimation.capacity }}
+                {{ estimation.user.email }}
             </div>
             <div class="col-1 text-center ">
                 <input type="checkbox" aria-label="Checkbox">
             </div>
             <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.capacity, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+                {{ form_widget(form.email, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
             </div>
         </div>
         <div class="row bg-light align-items-center">
             <div class="col-3 text-right">
-                Dommages par un liquide :
+                Numéro de téléphone :
             </div>
             <div class="col-2 text-center font-weight-bold">
-                {{ estimation.liquidDamage }}
+                0{{ estimation.user.phoneNumber }}
             </div>
             <div class="col-1 text-center ">
                 <input type="checkbox" aria-label="Checkbox">
             </div>
             <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.liquidDamage, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+                {{ form_widget(form.phoneNumber, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
             </div>
         </div>
         <div class="row bg-light align-items-center">
             <div class="col-3 text-right">
-                Ecran abimé :
+                Adresse :
             </div>
             <div class="col-2 text-center font-weight-bold">
-                {{ estimation.screenCracks }}
+                {{ estimation.user.address }}
             </div>
             <div class="col-1 text-center ">
                 <input type="checkbox" aria-label="Checkbox">
             </div>
             <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.screenCracks, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+                {{ form_widget(form.address, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
             </div>
         </div>
         <div class="row bg-light align-items-center">
             <div class="col-3 text-right">
-                Coque abimée :
+                Code postal :
             </div>
             <div class="col-2 text-center font-weight-bold">
-                {{ estimation.casingCracks }}
+                {{ estimation.user.postCode }}
             </div>
             <div class="col-1 text-center ">
                 <input type="checkbox" aria-label="Checkbox">
             </div>
             <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.casingCracks, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+                {{ form_widget(form.postcode, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
             </div>
         </div>
         <div class="row bg-light align-items-center">
             <div class="col-3 text-right">
-                Batterie défectueuse :
+                Ville :
             </div>
             <div class="col-2 text-center font-weight-bold">
-                {{ estimation.batteryCracks }}
+                {{ estimation.user.city }}
             </div>
             <div class="col-1 text-center ">
                 <input type="checkbox" aria-label="Checkbox">
             </div>
             <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.batteryCracks, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
-            </div>
-        </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                Bouton(s) défectueux :
-            </div>
-            <div class="col-2 text-center font-weight-bold">
-                {{ estimation.buttonCracks }}
-            </div>
-            <div class="col-1 text-center ">
-                <input type="checkbox" aria-label="Checkbox">
-            </div>
-            <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.buttonCracks, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+                {{ form_widget(form.city, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
             </div>
         </div>
         <div class="row">
-            <div class="col-12 mx-auto text-center form p-4">
+            <div class="col-4 mx-auto text-left form p-4">
+                <a href="{{ path('verifyEstim', { id: estimation.id}) }}" class="btn btn-dark"><- Précédent</a>
+            </div>
+            <div class="col-8 mx-auto text-right form p-4">
                 <button class="btn btn-info">{{ button_label|default('Mettre à jour') }}</button>
+                <a href="{{ path('takePhoto', { id: estimation.id}) }}" class="btn btn-success">Informations vérifiées, étape suivante -></a>
             </div>
         </div>
     </main>
