Debug : Changement du lien pour la suppression d'une estimation

--- a/templates/estimations/show.html.twig
+++ b/templates/estimations/show.html.twig
@@ -82,6 +82,6 @@
 
     <a class="fourth-button" href="{{ path('estimations_edit', {'id': estimation.id}) }}">Edit</a>
 
-    <a class="fourth-button" href="{{ path('estimations/_delete_form.html.twig') }}">Delete</a>
+    <a class="fourth-button" href="{{ path('estimations_delete', {'id': estimation.id}) }}">Delete</a>
 </section>
 {% endblock %}
