--- a/templates/estimations/editEstim.html.twig
+++ b/templates/estimations/editEstim.html.twig
@@ -30,7 +30,7 @@
         </div>
         <div class="row bg-light align-items-center">
             <div class="col-3 text-right">
-                Marque :
+                {{ form_label(form.brand) }} :
             </div>
             <div class="col-2 text-center font-weight-bold">
                 {{ estimation.brand }}
@@ -40,6 +40,7 @@
             </div>
             <div class="col-6 mx-auto text-center form p-4">
                 {{ form_widget(form.brand, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+                {{ form_errors(form.brand) }}
             </div>
         </div>
         <div class="row bg-light align-items-center">
@@ -67,7 +68,9 @@
                 <input type="checkbox" aria-label="Checkbox">
             </div>
             <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.capacity, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+                {{ form_widget(form.capacity, {'attr': {'class': 'form-control mt-3', 'required': true}}) }}
+                {{ form_help(form.capacity) }}
+                {{ form_errors(form.capacity) }}
             </div>
         </div>
         <div class="row bg-light align-items-center">
@@ -158,6 +161,19 @@
             </div>
             <div class="col-6 mx-auto text-left form p-4">
                 {{ form_widget(form.buttonCracks, {'attr': {'class': 'form-check mt-3', 'required': true}}) }}
+            </div>
+        </div>
+        <div class="row bg-light align-items-center">
+            <div class="col-3 text-right">
+                Prix estimé :
+            </div>
+            <div class="col-2 text-center font-weight-bold">
+                {{ estimation.estimatedPrice}} €
+            </div>
+            <div class="col-1 text-center ">
+            </div>
+            <div class="col-6 mx-auto text-left form p-4">
+                Le prix est recalculé automatiquement si des données sont mises à jour.
             </div>
         </div>
         <div class="row">
