--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,18 +6,42 @@
     <h1 class="primary-title">Inscription</h1>
 
     {{ form_start(registrationForm) }}
-        <p>Afin d'accéder aux points de collecte te concernant, appartiens-tu à un des organismes de la liste ci-dessous ?</p>
-        {{ form_row(registrationForm.organism, { 'label': 'Organismes partenaires de Bip Bip Mobile :' }) }}
-        <p>Tu souhaites que ton entreprise ou ton école organise une collecte ? N'hésite pas à <a href="{{ path('add_message') }}">nous envoyer un message !</a></p>
-        {{ form_row(registrationForm.firstname, { 'label': 'Prénom' }) }}
-        {{ form_row(registrationForm.lastname, { 'label': 'Nom' }) }}
-        {{ form_row(registrationForm.address, { 'label': 'Adresse' }) }}
-        {{ form_row(registrationForm.postcode, { 'label': 'Code Postal' }) }}
-        {{ form_row(registrationForm.city, { 'label': 'Ville' }) }}
-        {{ form_row(registrationForm.phoneNumber, { 'label': 'N° de téléphone' }) }}
-        {{ form_row(registrationForm.email, { 'label': 'Email' }) }}
-        {{ form_row(registrationForm.plainPassword, { 'label': 'Mot de passe' }) }}
-        {{ form_row(registrationForm.agreeTerms, { 'label': 'J\'accepter les termes' }) }}
+    <div class="container">
+        <div class="col-12">
+            <p>Afin d'accéder aux points de collecte te concernant, appartiens-tu à un des organismes de la liste ci-dessous ?</p>
+            {{ form_row(registrationForm.organism, { 'label': 'Organismes partenaires de Bip Bip Mobile :' }) }}
+            <p>Tu souhaites que ton entreprise ou ton école organise une collecte ? N'hésite pas à <a href="{{ path('add_message') }}">nous envoyer un message !</a></p>
+        </div>
+        <div class="col-12">
+            {{ form_row(registrationForm.firstname, { 'label': 'Prénom' }) }}
+        </div>
+        <div class="col-12">
+            {{ form_row(registrationForm.lastname, { 'label': 'Nom' }) }}
+        </div>
+        <div class="col-12">
+            {{ form_row(registrationForm.address, { 'label': 'Adresse' }) }}
+        </div>
+        <div class="col-12">
+            {{ form_row(registrationForm.postcode, { 'label': 'Code Postal' }) }}
+        </div>
+        <div class="col-12">
+            {{ form_row(registrationForm.city, { 'label': 'Ville' }) }}
+        </div>
+        <div class="col-12">
+            {{ form_row(registrationForm.phoneNumber, { 'label': 'N° de téléphone ', 'attr': {'class': '', 'placeholder': 'ex: 0635000000'} }) }}
+        </div>
+        <div class="col-12">
+            {{ form_row(registrationForm.email, { 'label': 'Email' }) }}
+        </div>
+        <div class="col-12">
+            {{ form_row(registrationForm.plainPassword, { 'label': 'Mot de passe' }) }}
+        </div>
+        <div class="col-12">
+            {{ form_row(registrationForm.agreeTerms, { 'label': 'J\'accepter les termes' }) }}
+        </div>
+
+    </div>
+
 
         <button class="fourth-button">S'inscrire</button>
     {{ form_end(registrationForm) }}
